Views, angular.js

--- a/app/static/general/_header.html
+++ b/app/static/general/_header.html
@@ -1,9 +1,9 @@
 <header>
 		<div class="ui teal large inverted menu">
-			<a class="ui item" href="#/">
+			<a class="ui item" href="/">
 				<i class="group icon"></i> VPMP
 			</a>
-			<a class="item" href="#/">
+			<a class="item" href="/">
 				<i class="home icon"></i> Inicio
 			</a>
 			<a class="item" href="profile">
@@ -19,7 +19,7 @@
 				<a class="ui item" href="login">
 					Iniciar Sesión
 				</a>
-				<a class="ui item" href="#/register">
+				<a class="ui item" href="register">
 					Registrarse
 				</a>
 			</div>
